# static-hpc

./: pyproject.toml
hpc/: experiment.sh  make_data.sh
src/hpc/: experiment.py  layers.py  make_data.py  models.py  utils.py
